--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ DATABASE_URL="file:./prisma/dev.db"
 # Generate AUTH_SECRET: openssl rand -base64 32
 AUTH_SECRET="change-me-generate-a-secret"
 AUTH_URL="http://localhost:3000"
+# Set AUTH_TRUST_HOST=true when behind a reverse proxy (Nginx, etc.)
+AUTH_TRUST_HOST="true"
 
 # Site – set to your public URL in production (e.g. https://yoursite.com)
 SITE_URL="http://localhost:3000"
