Update environment configuration and enhance layout components. Add NEXT_IGNORE_INCORRECT_LOCKFILE to .env.example, modify build script in package.json, and implement dynamic favicon URL generation in layout. Remove unused favicon.ico file and improve navigation links in blog pages for better user experience.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ SITE_URL="http://localhost:3000"
 
 # Optional: development vs production
 NODE_ENV="development"
+
+# Skip Next.js lockfile patching (avoids EACCES when yarn is present but not writable, e.g. on server)
+NEXT_IGNORE_INCORRECT_LOCKFILE=1
