--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "hela-linktree",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@10.9.0",
   "scripts": {
     "postinstall": "prisma generate",
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && env NEXT_IGNORE_INCORRECT_LOCKFILE=1 next build",
     "start": "next start",
     "lint": "eslint",
     "db:push": "prisma db push",
