Update environment configuration to support dynamic PORT settings. Modify .env.example and docker-compose.yml to include PORT variable, adjust Dockerfile to expose PORT, and update application URLs in layout and blog components to reflect the dynamic port configuration.

--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,20 @@ DATABASE_URL="file:./prisma/dev.db"
 
 # Auth – required in production
 # Generate AUTH_SECRET: openssl rand -base64 32
+# If you set PORT to something other than 3000, use that port in AUTH_URL (and SITE_URL)
 AUTH_SECRET="change-me-generate-a-secret"
 AUTH_URL="http://localhost:3000"
 # Set AUTH_TRUST_HOST=true when behind a reverse proxy (Nginx, etc.)
 AUTH_TRUST_HOST="true"
 
-# Site – set to your public URL in production (e.g. https://yoursite.com)
+# Site – set to your public URL in production (e.g. https://yoursite.com). For local dev, use same port as PORT.
 SITE_URL="http://localhost:3000"
 
 # Optional: development vs production
 NODE_ENV="development"
+
+# Port for dev and start (default 3000). Change if 3000 is in use, e.g. PORT=3001
+PORT=3000
 
 # Skip Next.js lockfile patching (avoids EACCES when yarn is present but not writable, e.g. on server)
 NEXT_IGNORE_INCORRECT_LOCKFILE=1
