--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
-# Production: set AUTH_SECRET, AUTH_URL, SITE_URL (e.g. in .env or export before docker compose up)
-# Example: AUTH_SECRET=$(openssl rand -base64 32) AUTH_URL=https://yoursite.com SITE_URL=https://yoursite.com docker compose up -d --build
+# Production: set AUTH_SECRET, AUTH_URL, SITE_URL, PORT (e.g. in .env)
+# Example: AUTH_SECRET=... AUTH_URL=https://yoursite.com SITE_URL=https://yoursite.com PORT=3001 docker compose up -d --build
 
 services:
   app:
@@ -7,10 +7,10 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "${PORT:-3000}:${PORT:-3000}"
     environment:
       - NODE_ENV=production
-      - PORT=3000
+      - PORT=${PORT:-3000}
       - DATABASE_URL=file:./prisma/dev.db
       - AUTH_SECRET=${AUTH_SECRET:-change-me-generate-a-secret}
       - AUTH_URL=${AUTH_URL:-http://localhost:3000}
@@ -20,7 +20,7 @@ services:
       - uploads-data:/app/public/uploads
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://127.0.0.1:3000/"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:${PORT:-3000}/"]
       interval: 30s
       timeout: 10s
       retries: 3
