--- a/deployment/nginx.conf.template
+++ b/deployment/nginx.conf.template
@@ -41,7 +41,7 @@ server {
         add_header Cache-Control "public";
     }
 
-    # Proxy to Next.js
+    # Proxy to Next.js (change 3000 if your app uses a different PORT)
     location / {
         proxy_pass http://127.0.0.1:3000;
         proxy_http_version 1.1;
